--- a/scss/layout/_aside.scss
+++ b/scss/layout/_aside.scss
@@ -31,7 +31,7 @@
   .menu {
     text-align: right;
     height: 0;
-    padding-top: 66px;
+    padding-top: 64px;
     padding-right: 0;
     transition: height .2s ease-out;
   }
@@ -40,7 +40,7 @@
     cursor: pointer;
     display: inline-block;
     float: right;
-    padding: 34px 0 30px 24px;
+    padding: 32px 0 28px 24px;
     position: relative;
     user-select: none;
   }
