--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -17,7 +17,7 @@ body {
                         "main main main main"
                         "main main main main"
                         "footer footer footer footer";
-    grid-template-columns: auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 0 $space-medium;
   }
 
